<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:background="@color/white"
    tools:context="eidreceipie.islam.mazharul.citycorporationchittagong.MenueButton">
    <include layout="@layout/custom_toolbar" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="left|center_vertical"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="15dp"

        android:layout_height="match_parent">



            <LinearLayout
                android:layout_width="330dp"
                android:background="@drawable/rounded_shape"
                android:layout_marginBottom="@dimen/gaph_between_button"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="60dp"
                    android:background="@drawable/note4"
                    android:layout_marginRight="10dp"

                    android:layout_height="60dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn1"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:id="@+id/butccton1" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn11"
                        android:visibility="visible"
                        android:textSize="14sp"

                        android:textColor="@color/black"
                        android:id="@+id/button1d1" />

                </LinearLayout>



            </LinearLayout>


        <LinearLayout
            android:layout_width="330dp"
            android:background="@drawable/rounded_shape"
            android:layout_marginBottom="@dimen/gaph_between_button"
            android:gravity="center_vertical"

            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="60dp"
                android:background="@drawable/note5"
                android:layout_marginRight="10dp"
                android:layout_height="60dp" />




            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn2"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:id="@+id/button1v" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn21"
                    android:textColor="@color/black" android:visibility="visible"
                    android:textSize="14sp"
                    android:id="@+id/button11c" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="330dp"
            android:background="@drawable/rounded_shape"
            android:layout_marginBottom="@dimen/gaph_between_button"
            android:gravity="center_vertical"

            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="60dp"
                android:background="@drawable/no2"
                android:layout_marginRight="10dp"
                android:layout_height="60dp" />




            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn3"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:id="@+id/buttonv1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn31"
                    android:visibility="visible"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:id="@+id/buttonc11" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="330dp"
            android:background="@drawable/rounded_shape"
            android:layout_marginBottom="@dimen/gaph_between_button"
            android:gravity="center_vertical"

            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="60dp"
                android:background="@drawable/no2"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"

                android:layout_height="60dp" />




            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn4"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:id="@+id/buttoncc1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn41"
                    android:visibility="visible"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:id="@+id/button11cc" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="330dp"
            android:background="@drawable/rounded_shape"
            android:layout_marginBottom="@dimen/gaph_between_button"
            android:gravity="center_vertical"

            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="60dp"
                android:background="@drawable/organization"
                android:layout_marginRight="10dp"
                android:layout_height="60dp" />




            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn5"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:id="@+id/button1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn51"
                    android:visibility="visible"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:id="@+id/button11" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="330dp"
            android:background="@drawable/rounded_shape"
            android:layout_marginBottom="@dimen/gaph_between_button"
            android:gravity="center_vertical"

            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="60dp"
                android:background="@drawable/organization"
                android:layout_marginRight="10dp"
                android:layout_height="60dp" />




            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn6"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:id="@+id/bwutton1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn61"
                    android:visibility="visible"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:id="@+id/buttodn11" />

            </LinearLayout>
        </LinearLayout>











    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/red"
        android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/banner_ctg"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/banner_ctg" />





    </LinearLayout>
</RelativeLayout>

